@@ -2424,16 +2424,17 @@ use this string when comparing the EXPECT string. You can override
 the default value by using this statement at the top of the Monit
 configuration file:
 
- SET EXPECTBUFFER <number> ["b"|"kb"|"mb"]
+ SET EXPECTBUFFER <number> ["b"|"kb"]
+
+Max value for the expect buffer is 100 kb. For example, to set
+the expect buffer to read 10 kilobytes:
+
+set expectbuffer 10 kb
 
 If your system supports POSIX regular expressions, you can use
 regular expressions in the EXPECT string, see regex(7) to learn
 more about the types of regular expressions you can use in an
 expect string.
-
-For example, to set the expect buffer to read 10 kilobytes:
-
- set expectbuffer 10 kb
 
 You can use non-printable characters in a SEND string if needed.
 Use the hex notation, \0xHEXHEX to send any char in the range
@@ -2443,7 +2444,17 @@ Quake 3 server:
  send "\0xFF\0xFF\0xFF\0xFFgetstatus"
  expect "sv_floodProtect|sv_maxPing"
 
-Simple SMTP protocol test example:
+Since both regex and string compare operates on a zero terminated
+string, you cannot test for '\0' in an EXPECT buffer since this
+character marks the end of the buffer. However, we escape '\0' in
+the expect buffer as "\0" which you can test for. That is, '\'
+followed by the ascii value for 0. For instance, here is how to
+test for an expect string that starts with zero followed by any
+number of characters.
+
+ expect "^[\\]0.*"
+
+Here is a simple SMTP protocol example:
 
  if failed 
     port 25 and
