@@ -9,11 +9,6 @@
 #include "Str.h"
 
 
-/**
- * Str.c unity tests
- */
-
-
 int main(void) {
 
         Bootstrap(); // Need to initialize library
