@@ -232,7 +232,9 @@ typedef enum {
 #define HANDLER_MMONIT     0x2
 #define HANDLER_MAX        HANDLER_MMONIT
 
-#define ICMP_ATTEMPT_COUNT      3
+#define ICMP_ATTEMPT_COUNT 3
+
+#define EXPECT_BUFFER_MAX (UNIT_KILOBYTE * 100 + 1)
 
 
 /** ------------------------------------------------- Special purpose macros */
@@ -590,6 +592,7 @@ typedef struct myactionrate {
  cycle based every statement and the new cron-format version */
 typedef struct myevery {
         int type; /**< 0 = not set, 1 = cycle, 2 = cron, 3 = negated cron */
+        time_t last_run;
         union {
                 struct {
                         int number; /**< Check this program at a given cycles */
